# gifdec

./: .gitignore  CMakeLists.txt  README.md
